; ModuleID = '/home/carl/AnghaBench/systemd/src/login/extr_logind.c_manager_dispatch_reload_signal.c'
source_filename = "/home/carl/AnghaBench/systemd/src/login/extr_logind.c_manager_dispatch_reload_signal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.signalfd_siginfo = type { i32 }

@.str = private unnamed_addr constant [48 x i8] c"Failed to parse config file, using defaults: %m\00", align 1
@.str.1 = private unnamed_addr constant [22 x i8] c"Config file reloaded.\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, %struct.signalfd_siginfo*, i8*)* @manager_dispatch_reload_signal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @manager_dispatch_reload_signal(i32* %0, %struct.signalfd_siginfo* %1, i8* %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.signalfd_siginfo*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store %struct.signalfd_siginfo* %1, %struct.signalfd_siginfo** %5, align 8
  store i8* %2, i8** %6, align 8
  %9 = load i8*, i8** %6, align 8
  %10 = bitcast i8* %9 to i32*
  store i32* %10, i32** %7, align 8
  %11 = load i32*, i32** %7, align 8
  %12 = call i32 @manager_reset_config(i32* %11)
  %13 = load i32*, i32** %7, align 8
  %14 = call i32 @manager_parse_config_file(i32* %13)
  store i32 %14, i32* %8, align 4
  %15 = load i32, i32* %8, align 4
  %16 = icmp slt i32 %15, 0
  br i1 %16, label %17, label %20

17:                                               ; preds = %3
  %18 = load i32, i32* %8, align 4
  %19 = call i32 @log_warning_errno(i32 %18, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0))
  br label %22

20:                                               ; preds = %3
  %21 = call i32 @log_info(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.1, i64 0, i64 0))
  br label %22

22:                                               ; preds = %20, %17
  ret i32 0
}

declare dso_local i32 @manager_reset_config(i32*) #1

declare dso_local i32 @manager_parse_config_file(i32*) #1

declare dso_local i32 @log_warning_errno(i32, i8*) #1

declare dso_local i32 @log_info(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
